--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -9,7 +9,7 @@
         ui = true
 [core]
         excludesfile = ~/.gitignore
-        editor = vim
+        editor = code --wait
 [apply]
         whitespace = nowarn
 [mergetool]
