feat: Add OS detection and generic package installation to bootstrap script, and enhance gitconfig with autocrlf and new fetch, rebase, commit, pull, rerere, and merge settings.

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -10,6 +10,7 @@
 [core]
         excludesfile = ~/.gitignore
         editor = code --wait
+        autocrlf = input
 [apply]
         whitespace = nowarn
 [mergetool]
@@ -26,3 +27,15 @@
         default = simple
 [init]
     defaultBranch = main
+[fetch]
+    prune = true
+[rebase]
+    autoStash = true
+[commit]
+    verbose = true
+[pull]
+    rebase = true
+[rerere]
+    enabled = true
+[merge]
+    conflictstyle = zdiff3
